# MusicPlayer

./: CMakeLists.txt  DetailFavoritePageView.qml  DetailHistoryPageView.qml  DetailLocalPageView.qml  DetailMyPlayListPageView.qml  DetailPlayListPageView.qml  DetailRecommendPageView.qml  DetailSearchPageView.qml  LayoutBottomView.qml  LayoutHeaderView.qml  MusicBannerView.qml  MusicBorderImage.qml  MusicGridHotView.qml  MusicGridLatestView.qml  MusicIconButton.qml  MusicListView.qml  MusicLyricView.qml  MusicRoundImage.qml  MusicTextButton.qml  MusicToolButton.qml  PageDetailView.qml  PageHomeView.qml  README.md  fileio.cpp  fileio.h  filemetareader.cpp  filemetareader.h  httputils.cpp  httputils.h  images.qrc  main.cpp  main.qml  package_appimage.sh  qml.qrc  startAPIServer.cpp  startAPIServer.h
api/: generateConfig.js  main.js  package-lock.json  package.json  server.js
doc/: ShirohaPlayer开发文档.odt  代码说明文档.odt  开发心得.odt
